# chatot

./: .env.example  .gitignore  README.md  makefile  pyproject.toml  scripts.py
bruno/: Health Check.bru  Start Listening.bru  Status.bru  Stop Listening.bru  bruno.json
bruno/environments/: prod.bru
chatot/: .env.example  log.py  main.py
chatot/api/: __init__.py  flask.py  huddle_service.py  types.py
chatot/huddle/: __init__.py  handlers.py  manager.py
chatot/recorder/: __init__.py  audio_recorder.py
chatot/uploader/: main.py
chatot/utils/: main.py  webhook_sender.py
