[tool.poetry]
name = "chatot"
version = "0.1.0"
description = ""
authors = ["Akash Mondal <akmo3901@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
fmt = "scripts:fmt"
check = "scripts:check"

[tool.ruff]
exclude = ["proto"]

[tool.poetry.dependencies]
python = "^3.12"
huddle01 = "1.1.0"
python-dotenv = "^1.0.1"
numpy = "^2.2.4"
pydub = "^0.25.1"
ruff = ">=0.6.0,<=0.9.1"
boto3 = "^1.37.19"
flask = { extras = ["async"], version = "^3.1.0" }
requests = "^2.32.3"
pyee = "11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
